--- a/app/views/books/form/_fields.html.erb
+++ b/app/views/books/form/_fields.html.erb
@@ -17,10 +17,10 @@
       <% end %>
 
       <div class="flex items-center justify-between gap-2 py-1 px-2">
-        <button type="button" data-action="checkbox-set#deselectAll" class="flex-1 inline-flex items-center justify-center rounded-md border border-transparent bg-gray-200 px-2.5 py-1.5 text-base font-medium text-gray-900 shadow-sm hover:bg-gray-300">
+        <button type="button" data-action="checkbox-set#deselectAll" class="flex-1 inline-flex items-center justify-center rounded-md border border-transparent bg-gray-200 px-2.5 py-1.5 text-base font-medium text-gray-900 shadow-xs hover:bg-gray-300">
           Hide all
         </button>
-        <button type="button" data-action="checkbox-set#selectAll" class="flex-1 inline-flex items-center justify-center rounded-md border border-transparent bg-gray-200 px-2.5 py-1.5 text-base font-medium text-gray-900 shadow-sm hover:bg-gray-300">
+        <button type="button" data-action="checkbox-set#selectAll" class="flex-1 inline-flex items-center justify-center rounded-md border border-transparent bg-gray-200 px-2.5 py-1.5 text-base font-medium text-gray-900 shadow-xs hover:bg-gray-300">
           Show all
         </button>
       </div>
